--- a/.jshintrc
+++ b/.jshintrc
@@ -70,7 +70,7 @@
     "dojo"          : false,    // Dojo Toolkit
     "jasmine"       : false,    // Jasmine
     "jquery"        : false,    // jQuery
-    "mocha"         : true,     // Mocha
+    "mocha"         : false,    // Mocha
     "mootools"      : false,    // MooTools
     "node"          : true,     // Node.js
     "nonstandard"   : false,    // Widely adopted globals (escape, unescape, etc)
@@ -83,6 +83,6 @@
     "yui"           : false,    // Yahoo User Interface
 
     // Custom Globals
-    "globals"       : {"console": false, "process": true, "require": false} // additional predefined global variables
-    "predef"        : ["process", "console", "window", "cordova", "StatusBar", "navigator", "device", "$cordovaBLE", "_", "numeral", "moment", "setTimeout", "document", "Uint8Array", "$", "Raphael", "clearInterval", "setInterval"]
+    "globals"       : {"console": true, "process": true, "require": true}, // additional predefined global variables
+    "predef"        : ["process", "console", "require"]
 }
