--- a/.jshintrc
+++ b/.jshintrc
@@ -82,7 +82,10 @@
     "wsh"           : false,    // Windows Scripting Host
     "yui"           : false,    // Yahoo User Interface
 
-    // Custom Globals
-    "globals"       : {"console": true, "process": true, "require": true}, // additional predefined global variables
-    "predef"        : ["process", "console", "require"]
+    // Custom Globals  (additional predefined global variables)
+    "globals"       : {
+        "console": true,
+        "process": true,
+        "require": true,
+    }
 }
