remove the fucking comma after the last element

--- a/.jshintrc
+++ b/.jshintrc
@@ -86,6 +86,6 @@
     "globals"       : {
         "console": true,
         "process": true,
-        "require": true,
+        "require": true
     }
 }
